--- a/MA.Web/mobile/js/jquery-ui-1.8.24.custom/development-bundle/demos/slider/side-scroll.html
+++ b/MA.Web/mobile/js/jquery-ui-1.8.24.custom/development-bundle/demos/slider/side-scroll.html
@@ -50,7 +50,7 @@
 			scrollbar.width( "100%" );
 		})
 		.append( "<span class='ui-icon ui-icon-grip-dotted-vertical'></span>" )
-		.wrap( "<div class='ui-handle-helper-parent'></div>" ).parent();
+		.wrap( "<div class='ui-handle-Helper-parent'></div>" ).parent();
 		
 		//change overflow to hidden now that slider handles the scrolling
 		scrollPane.css( "overflow", "hidden" );
