--- a/MA.Web/Design/homepage-content-slider.html
+++ b/MA.Web/Design/homepage-content-slider.html
@@ -19,21 +19,21 @@
 <!--CHOOSE WICH FONT YOU WANT TO USE AND DELETE THE REST FOR FASTER LOADING-->
 <link href='http://fonts.googleapis.com/css?family=Coustard|Questrial|Gloria+Hallelujah|Rochester|Abel|Rationale|Bowlby+One+SC|Snippet|Leckerli+One|Redressed|Aubrey|Open+Sans+Condensed:300|Paytone+One|Brawler|Tienne|Hammersmith+One|Rokkitt|Varela|Kreon|Oswald|Sunshiney|PT+Sans+Narrow|Istok+Web|Amaranth|Josefin+Sans|Nova+Script|Muli|Nova+Mono|Pompiere|News+Cycle|Old+Standard+TT|Cedarville+Cursive|Dancing+Script|Droid+Sans|Architects+Daughter|Smythe|Caudex|IM+Fell+Double+Pica|Zeyada|Buda:300|IM+Fell+French+Canon+SC|Josefin+Slab|Syncopate|Jura|Arimo|Coming+Soon|Quattrocento|Gruppo|IM+Fell+English+SC|Nova+Slim|Cuprum|Rock+Salt|Droid+Serif|Geostar+Fill|Geostar|Alice|Andika|Comfortaa|Delius+Swash+Caps|Actor|Marvel|Tulpen+One|Smokum|Carme|Delius|Black+Ops+One|Federo|Gentium+Basic|Yellowtail|The+Girl+Next+Door|Rosario|Swanky+and+Moo+Moo|Annie+Use+Your+Telescope|Play|Kameron|Lobster+Two|Anton|Just+Me+Again+Down+Here|Bangers|Coda:800|Open+Sans|Bigshot+One|UnifrakturCook:700|Shanti|IM+Fell+French+Canon|IM+Fell+Double+Pica+SC|Love+Ya+Like+A+Sister|Expletus+Sans|Merriweather|Kranky|IM+Fell+DW+Pica+SC|Ovo|PT+Serif|Copse|VT323|Coda+Caption:800|Allerta+Stencil|Lato|Meddon|Stardos+Stencil|Nobile' rel='stylesheet' type='text/css'>
 <!--GOOGLE FONTS-->
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/custom.js"></script>
+<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/custom.js"></script>
 <script type="text/javascript" src="js/jqueryTools/jquery.tools.min.html"></script>
-<script type="text/javascript" src="js/slides/slides.min.jquery.js"></script>
-<script type="text/javascript" src="js/cycle-slider/cycle.js"></script>
-<script type="text/javascript" src="js/nivo-slider/jquery.nivo.slider.js"></script>
-<script type="text/javascript" src="js/tabify/jquery.tabify.js"></script>
-<script type="text/javascript" src="js/prettyPhoto/jquery.prettyPhoto.js"></script>
-<script type="text/javascript" src="js/twitter/jquery.tweet.js"></script>
-<script type="text/javascript" src="js/scrolltop/scrolltopcontrol.js"></script>
-<script type="text/javascript" src="js/portfolio/filterable.js"></script>
-<script type="text/javascript" src="js/modernizr/modernizr-2.0.3.js"></script>
-<script type="text/javascript" src="js/easing/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="js/kwicks/jquery.kwicks-1.5.1.pack.js"></script>
-<script type="text/javascript" src="js/swfobject/swfobject.js"></script>
+<script type="text/javascript" src="../js/slides.min.jquery.js"></script>
+<script type="text/javascript" src="../js/cycle.js"></script>
+<script type="text/javascript" src="../js/jquery.nivo.slider.js"></script>
+<script type="text/javascript" src="../js/tabify/jquery.tabify.js"></script>
+<script type="text/javascript" src="../js/prettyPhoto/jquery.prettyPhoto.js"></script>
+<script type="text/javascript" src="../js/twitter/jquery.tweet.js"></script>
+<script type="text/javascript" src="../js/scrolltop/scrolltopcontrol.js"></script>
+<script type="text/javascript" src="../js/portfolio/filterable.js"></script>
+<script type="text/javascript" src="../js/modernizr/modernizr-2.0.3.js"></script>
+<script type="text/javascript" src="../js/easing/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="../js/kwicks/jquery.kwicks-1.5.1.pack.js"></script>
+<script type="text/javascript" src="../js/swfobject/swfobject.js"></script>
 <!--CUFON FONTS-->
 <script type="text/javascript" src="js/cufon-fonts/cufon.js"></script>
 <script type="text/javascript" src="js/cufon-fonts/cufon-settings.js"></script>
@@ -167,10 +167,10 @@
 							<div class="slides_container small-slider">
 								<!-- SLIDER STARTS-->
 								<!-- SLIDER CONTENT STARTS-->
-								<img src="design/images/slideshow/slide-small-01.jpg" alt=" " width="620" height="350"/>
-								<img src="design/images/slideshow/slide-small-02.jpg" alt=" " width="620" height="350"/>
-								<img src="design/images/slideshow/slide-small-03.jpg" alt=" " width="620" height="350"/>
-								<img src="design/images/slideshow/slide-small-04.jpg" alt=" " width="620" height="350"/>
+								<img src="images/slideshow/slide-rossa-01.jpg" alt=" " width="620" height="350"/>
+								<img src="images/slideshow/slide-rossa-02.jpg" alt=" " width="620" height="350"/>
+								<img src="images/slideshow/slide-small-03.jpg" alt=" " width="620" height="350"/>
+								<img src="images/slideshow/slide-small-04.jpg" alt=" " width="620" height="350"/>
 							</div>
 							<!-- SLIDESHOW CONTAINER ENDS-->
 						</div>
